--- a/apps/dss/demo/pom.xml
+++ b/apps/dss/demo/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>eu.europa.ec.joinup.sd-dss</groupId>
         <artifactId>sd-dss-app</artifactId>
-	    <version>4.3.0</version>
+	    <version>5.0.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
