--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 	<artifactId>sd-dss</artifactId>
-	<version>4.3.0</version>
+	<version>5.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Digital Signature Services</name>
 
@@ -490,7 +490,7 @@
 	<distributionManagement>
 		<repository>
 			<id>deployment</id>
-			<name>4.1.0</name>
+			<name>SD-DSS 4.3.0</name>
 			<url>https://joinup.ec.europa.eu/nexus/content/repositories/releases/</url>
 			<!-- bad URL <url>https://joinup.ec.europa.eu/nexus/content/repositories/releases/eu/europa/ec/joinup/sd-dss/</url>-->
 		</repository>
