--- a/apps/sscd-mocca-adapter/pom.xml
+++ b/apps/sscd-mocca-adapter/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>at.gv.egiz</groupId>
             <artifactId>smcc</artifactId>
-            <version>1.3.15-SNAPSHOT</version>
+            <version>1.3.15</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
