--- a/pom.xml
+++ b/pom.xml
@@ -268,7 +268,7 @@
 			<dependency>
 				<groupId>com.sun.xml.bind</groupId>
 				<artifactId>jaxb-impl</artifactId>
-				<version>2.2.10-b140310.1920</version>
+				<version>2.2.6</version>
 			</dependency>
 			<dependency>
 				<groupId>org.jvnet.jaxb2.maven2</groupId>
