--- a/apps/dss/core/dss-document/pom.xml
+++ b/apps/dss/core/dss-document/pom.xml
@@ -63,6 +63,10 @@
 		</plugins>
 	</build>
 
+	<properties>
+		<junit.version>4.12</junit.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
@@ -119,6 +123,12 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
