--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 	<artifactId>sd-dss</artifactId>
-	<version>5.0.0-SNAPSHOT</version>
+	<version>4.3.1</version>
 	<packaging>pom</packaging>
 	<name>Digital Signature Services</name>
 
