--- a/apps/sscd-mocca-adapter/pom.xml
+++ b/apps/sscd-mocca-adapter/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>sd-dss</artifactId>
         <groupId>eu.europa.ec.joinup.sd-dss</groupId>
-	    <version>4.3.1</version>
+	    <version>4.3.2-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
 
