--- a/dss-package-ootb-webapp/pom.xml
+++ b/dss-package-ootb-webapp/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>eu.europa.ec.joinup.sd-dss</groupId>
         <artifactId>sd-dss-app</artifactId>
-        <version>4.3.0.w09-SNAPSHOT</version>
+        <version>4.3.0.w09-2-SNAPSHOT</version>
         <relativePath>../apps/dss</relativePath>
     </parent>
 
