Validation improvements: new constraints

--- a/apps/dss/pom.xml
+++ b/apps/dss/pom.xml
@@ -19,8 +19,8 @@
 
     <modules>
         <module>core</module>
-        <module>integration/dss-webservices</module>
-        <module>integration/dss-webservices-client</module>
-        <module>demo</module>
+        <!--<module>integration/dss-webservices</module>-->
+        <!--<module>integration/dss-webservices-client</module>-->
+        <!--<module>demo</module>-->
     </modules>
 </project>
