--- a/apps/dss/core/dss-spi/pom.xml
+++ b/apps/dss/core/dss-spi/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 		<artifactId>sd-dss-app</artifactId>
-		<version>4.3.2-SNAPSHOT</version>
+		<version>4.3.3</version>
 		<relativePath>../..</relativePath>
 	</parent>
 
