--- a/apps/dss/pom.xml
+++ b/apps/dss/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>eu.europa.ec.joinup.sd-dss</groupId>
         <artifactId>sd-dss</artifactId>
-	    <version>4.3.2-SNAPSHOT</version>
+	    <version>4.3.3</version>
         <relativePath>../..</relativePath>
     </parent>
 
