--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 	<artifactId>sd-dss</artifactId>
-	<version>4.3.2-SNAPSHOT</version>
+	<version>4.3.3</version>
 	<packaging>pom</packaging>
 	<name>Digital Signature Services</name>
 
@@ -305,92 +305,92 @@
 				<artifactId>bcmail-jdk15on</artifactId>
 				<version>${bouncycastle.version}</version>
 			</dependency>
-			<dependency>
-				<groupId>org.netbeans.api</groupId>
-				<artifactId>org-openide-dialogs</artifactId>
-				<version>RELEASE71</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-beans</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-core</artifactId>
-				<version>${spring.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>commons-logging</groupId>
-						<artifactId>commons-logging</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-web</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-webmvc</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-orm</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-aop</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-context-support</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-jdbc</artifactId>
-				<version>${spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.quartz-scheduler</groupId>
-				<artifactId>quartz</artifactId>
-				<version>2.2.1</version>
-			</dependency>
-			<dependency>
-				<groupId>org.hsqldb</groupId>
-				<artifactId>hsqldb</artifactId>
-				<version>1.8.0.10</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.tiles</groupId>
-				<artifactId>tiles-api</artifactId>
-				<version>${tiles.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.tiles</groupId>
-				<artifactId>tiles-core</artifactId>
-				<version>${tiles.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.tiles</groupId>
-				<artifactId>tiles-jsp</artifactId>
-				<version>${tiles.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.tiles</groupId>
-				<artifactId>tiles-servlet</artifactId>
-				<version>${tiles.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.tiles</groupId>
-				<artifactId>tiles-template</artifactId>
-				<version>${tiles.version}</version>
-			</dependency>
+			<!--<dependency>-->
+				<!--<groupId>org.netbeans.api</groupId>-->
+				<!--<artifactId>org-openide-dialogs</artifactId>-->
+				<!--<version>RELEASE71</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.springframework</groupId>-->
+				<!--<artifactId>spring-beans</artifactId>-->
+				<!--<version>${spring.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.springframework</groupId>-->
+				<!--<artifactId>spring-core</artifactId>-->
+				<!--<version>${spring.version}</version>-->
+				<!--<exclusions>-->
+					<!--<exclusion>-->
+						<!--<groupId>commons-logging</groupId>-->
+						<!--<artifactId>commons-logging</artifactId>-->
+					<!--</exclusion>-->
+				<!--</exclusions>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.springframework</groupId>-->
+				<!--<artifactId>spring-web</artifactId>-->
+				<!--<version>${spring.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.springframework</groupId>-->
+				<!--<artifactId>spring-webmvc</artifactId>-->
+				<!--<version>${spring.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.springframework</groupId>-->
+				<!--<artifactId>spring-orm</artifactId>-->
+				<!--<version>${spring.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.springframework</groupId>-->
+				<!--<artifactId>spring-aop</artifactId>-->
+				<!--<version>${spring.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.springframework</groupId>-->
+				<!--<artifactId>spring-context-support</artifactId>-->
+				<!--<version>${spring.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.springframework</groupId>-->
+				<!--<artifactId>spring-jdbc</artifactId>-->
+				<!--<version>${spring.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.quartz-scheduler</groupId>-->
+				<!--<artifactId>quartz</artifactId>-->
+				<!--<version>2.2.1</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.hsqldb</groupId>-->
+				<!--<artifactId>hsqldb</artifactId>-->
+				<!--<version>1.8.0.10</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.apache.tiles</groupId>-->
+				<!--<artifactId>tiles-api</artifactId>-->
+				<!--<version>${tiles.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.apache.tiles</groupId>-->
+				<!--<artifactId>tiles-core</artifactId>-->
+				<!--<version>${tiles.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.apache.tiles</groupId>-->
+				<!--<artifactId>tiles-jsp</artifactId>-->
+				<!--<version>${tiles.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.apache.tiles</groupId>-->
+				<!--<artifactId>tiles-servlet</artifactId>-->
+				<!--<version>${tiles.version}</version>-->
+			<!--</dependency>-->
+			<!--<dependency>-->
+				<!--<groupId>org.apache.tiles</groupId>-->
+				<!--<artifactId>tiles-template</artifactId>-->
+				<!--<version>${tiles.version}</version>-->
+			<!--</dependency>-->
 			<!-- Logger -->
 			<dependency>
 				<groupId>log4j</groupId>
