--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 	<artifactId>sd-dss</artifactId>
-	<version>4.3.3</version>
+	<version>4.3.4</version>
 	<packaging>pom</packaging>
 	<name>Digital Signature Services</name>
 
@@ -175,33 +175,30 @@
 		<spring.version>3.1.4.RELEASE</spring.version>
 		<tiles.version>2.2.2</tiles.version>
 		<slf4j.version>1.6.6</slf4j.version>
-		<bouncycastle.version>1.51</bouncycastle.version>
 		<jgoodies-forms.version>1.6.0</jgoodies-forms.version>
 		<jgoodies-bindings.version>2.7.0</jgoodies-bindings.version>
 		<flying-saucer.version>9.0.4</flying-saucer.version>
 		<beansbinding.version>1.2.1</beansbinding.version>
-		<xmlsec.version>2.0.2</xmlsec.version>
-		<pdfbox.version>1.8.8</pdfbox.version>
 	</properties>
 
 	<dependencyManagement>
 		<dependencies>
 			<!-- Internal Dependencies -->
 			<!--<dependency>-->
-				<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
-				<!--<artifactId>dss-demo-applet</artifactId>-->
-				<!--<version>${project.version}</version>-->
+			<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
+			<!--<artifactId>dss-demo-applet</artifactId>-->
+			<!--<version>${project.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
-				<!--<artifactId>dss-demo-applet-package</artifactId>-->
-				<!--<version>${project.version}</version>-->
+			<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
+			<!--<artifactId>dss-demo-applet-package</artifactId>-->
+			<!--<version>${project.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
-				<!--<artifactId>dss-demo-webapp</artifactId>-->
-				<!--<type>war</type>-->
-				<!--<version>${project.version}</version>-->
+			<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
+			<!--<artifactId>dss-demo-webapp</artifactId>-->
+			<!--<type>war</type>-->
+			<!--<version>${project.version}</version>-->
 			<!--</dependency>-->
 			<dependency>
 				<groupId>eu.europa.ec.joinup.sd-dss</groupId>
@@ -219,14 +216,14 @@
 				<version>${project.version}</version>
 			</dependency>
 			<!--<dependency>-->
-				<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
-				<!--<artifactId>dss-webservices</artifactId>-->
-				<!--<version>${project.version}</version>-->
+			<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
+			<!--<artifactId>dss-webservices</artifactId>-->
+			<!--<version>${project.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
-				<!--<artifactId>dss-webservices-client</artifactId>-->
-				<!--<version>${project.version}</version>-->
+			<!--<groupId>eu.europa.ec.joinup.sd-dss</groupId>-->
+			<!--<artifactId>dss-webservices-client</artifactId>-->
+			<!--<version>${project.version}</version>-->
 			<!--</dependency>-->
 			<dependency>
 				<groupId>eu.europa.ec.joinup.sd-dss</groupId>
@@ -237,7 +234,7 @@
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
-				<version>4.3.5</version>
+				<version>4.3.6</version>
 				<exclusions>
 					<exclusion>
 						<groupId>commons-codec</groupId>
@@ -253,7 +250,7 @@
 			<dependency>
 				<groupId>org.apache.santuario</groupId>
 				<artifactId>xmlsec</artifactId>
-				<version>${xmlsec.version}</version>
+				<version>2.0.4</version>
 			</dependency>
 			<dependency>
 				<groupId>xerces</groupId>
@@ -293,103 +290,109 @@
 			<dependency>
 				<groupId>org.apache.pdfbox</groupId>
 				<artifactId>pdfbox</artifactId>
-				<version>${pdfbox.version}</version>
+				<version>1.8.9</version>
+				<exclusions>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.bouncycastle</groupId>
 				<artifactId>bcprov-jdk15on</artifactId>
-				<version>${bouncycastle.version}</version>
+				<version>1.52</version>
 			</dependency>
 			<dependency>
 				<groupId>org.bouncycastle</groupId>
 				<artifactId>bcmail-jdk15on</artifactId>
-				<version>${bouncycastle.version}</version>
+				<version>1.52</version>
 			</dependency>
 			<!--<dependency>-->
-				<!--<groupId>org.netbeans.api</groupId>-->
-				<!--<artifactId>org-openide-dialogs</artifactId>-->
-				<!--<version>RELEASE71</version>-->
+			<!--<groupId>org.netbeans.api</groupId>-->
+			<!--<artifactId>org-openide-dialogs</artifactId>-->
+			<!--<version>RELEASE71</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.springframework</groupId>-->
-				<!--<artifactId>spring-beans</artifactId>-->
-				<!--<version>${spring.version}</version>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-beans</artifactId>-->
+			<!--<version>${spring.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.springframework</groupId>-->
-				<!--<artifactId>spring-core</artifactId>-->
-				<!--<version>${spring.version}</version>-->
-				<!--<exclusions>-->
-					<!--<exclusion>-->
-						<!--<groupId>commons-logging</groupId>-->
-						<!--<artifactId>commons-logging</artifactId>-->
-					<!--</exclusion>-->
-				<!--</exclusions>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-core</artifactId>-->
+			<!--<version>${spring.version}</version>-->
+			<!--<exclusions>-->
+			<!--<exclusion>-->
+			<!--<groupId>commons-logging</groupId>-->
+			<!--<artifactId>commons-logging</artifactId>-->
+			<!--</exclusion>-->
+			<!--</exclusions>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.springframework</groupId>-->
-				<!--<artifactId>spring-web</artifactId>-->
-				<!--<version>${spring.version}</version>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-web</artifactId>-->
+			<!--<version>${spring.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.springframework</groupId>-->
-				<!--<artifactId>spring-webmvc</artifactId>-->
-				<!--<version>${spring.version}</version>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-webmvc</artifactId>-->
+			<!--<version>${spring.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.springframework</groupId>-->
-				<!--<artifactId>spring-orm</artifactId>-->
-				<!--<version>${spring.version}</version>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-orm</artifactId>-->
+			<!--<version>${spring.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.springframework</groupId>-->
-				<!--<artifactId>spring-aop</artifactId>-->
-				<!--<version>${spring.version}</version>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-aop</artifactId>-->
+			<!--<version>${spring.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.springframework</groupId>-->
-				<!--<artifactId>spring-context-support</artifactId>-->
-				<!--<version>${spring.version}</version>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-context-support</artifactId>-->
+			<!--<version>${spring.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.springframework</groupId>-->
-				<!--<artifactId>spring-jdbc</artifactId>-->
-				<!--<version>${spring.version}</version>-->
+			<!--<groupId>org.springframework</groupId>-->
+			<!--<artifactId>spring-jdbc</artifactId>-->
+			<!--<version>${spring.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.quartz-scheduler</groupId>-->
-				<!--<artifactId>quartz</artifactId>-->
-				<!--<version>2.2.1</version>-->
+			<!--<groupId>org.quartz-scheduler</groupId>-->
+			<!--<artifactId>quartz</artifactId>-->
+			<!--<version>2.2.1</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.hsqldb</groupId>-->
-				<!--<artifactId>hsqldb</artifactId>-->
-				<!--<version>1.8.0.10</version>-->
+			<!--<groupId>org.hsqldb</groupId>-->
+			<!--<artifactId>hsqldb</artifactId>-->
+			<!--<version>1.8.0.10</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.apache.tiles</groupId>-->
-				<!--<artifactId>tiles-api</artifactId>-->
-				<!--<version>${tiles.version}</version>-->
+			<!--<groupId>org.apache.tiles</groupId>-->
+			<!--<artifactId>tiles-api</artifactId>-->
+			<!--<version>${tiles.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.apache.tiles</groupId>-->
-				<!--<artifactId>tiles-core</artifactId>-->
-				<!--<version>${tiles.version}</version>-->
+			<!--<groupId>org.apache.tiles</groupId>-->
+			<!--<artifactId>tiles-core</artifactId>-->
+			<!--<version>${tiles.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.apache.tiles</groupId>-->
-				<!--<artifactId>tiles-jsp</artifactId>-->
-				<!--<version>${tiles.version}</version>-->
+			<!--<groupId>org.apache.tiles</groupId>-->
+			<!--<artifactId>tiles-jsp</artifactId>-->
+			<!--<version>${tiles.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.apache.tiles</groupId>-->
-				<!--<artifactId>tiles-servlet</artifactId>-->
-				<!--<version>${tiles.version}</version>-->
+			<!--<groupId>org.apache.tiles</groupId>-->
+			<!--<artifactId>tiles-servlet</artifactId>-->
+			<!--<version>${tiles.version}</version>-->
 			<!--</dependency>-->
 			<!--<dependency>-->
-				<!--<groupId>org.apache.tiles</groupId>-->
-				<!--<artifactId>tiles-template</artifactId>-->
-				<!--<version>${tiles.version}</version>-->
+			<!--<groupId>org.apache.tiles</groupId>-->
+			<!--<artifactId>tiles-template</artifactId>-->
+			<!--<version>${tiles.version}</version>-->
 			<!--</dependency>-->
 			<!-- Logger -->
 			<dependency>
