--- a/dss-diagnostic-jaxb/pom.xml
+++ b/dss-diagnostic-jaxb/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 		<artifactId>sd-dss</artifactId>
-		<version>4.4.RC2</version>
+		<version>4.4.RC2.d4j.1</version>
 	</parent>
 	
 	<artifactId>dss-diagnostic-jaxb</artifactId>
